# ROS

./: README.md
husky/husky_control/: CMakeLists.txt  package.xml
husky/husky_control/launch/: teleop.launch
husky/husky_control/src/: keyboard.py
husky/husky_gazebo/launch/: husky_test.launch  spawn_husky.launch
octomap/lib/: liboctomap.so.1.7  liboctomap.so.1.7.2  liboctomath.so.1.7  liboctomath.so.1.7.2
octomap/lib/cmake/octomap/: octomap-config-version.cmake  octomap-config.cmake
test/: CMakeLists.txt
test/practica_fran/: package.xml
test/src/prac_1/: direction_auto.cpp  manager.cpp
test/src/prac_2/: auto2.cpp
test/world/: laberinto.pgm  laberinto.world
